✏️ Dernier push avant le J

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,8 @@
 {
   "cssTheme": "",
-  "accentColor": "#ffc07d"
+  "accentColor": "#ffc07d",
+  "interfaceFontFamily": "Poppins",
+  "textFontFamily": "Poppins",
+  "baseFontSize": 15,
+  "nativeMenus": false
 }
