--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+.DS_Store
+.gitignore
 node_modules
-.quartz-cache
 public
-.vscode
-.trash
+prof
+tsconfig.tsbuildinfo
+.obsidian
+.quartz-cache
+private/
+.replit
+replit.nix
