--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "preview": "vitepress preview"
   },
   "dependencies": {
-    "aplos": "^2.5.0",
-    "sass": "^1.87.0",
-    "sass-embedded": "^1.87.0",
-    "vitepress": "^1.6.3"
+    "@catppuccin/vitepress": "^0.1.2",
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-auto-sidebar": "^1.3.5",
+    "vitepress-sidebar": "^1.31.1"
   }
 }
