--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "@catppuccin/vitepress": "^0.1.2",
     "vitepress": "^1.6.3",
     "vitepress-sidebar": "^1.31.1"
+  },
+  "devDependencies": {
+    "mermaid": "^11.6.0",
+    "vitepress-plugin-mermaid": "^2.0.17"
   }
 }
