--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vitepress-sidebar": "^1.31.1"
   },
   "devDependencies": {
+    "markdown-it-mathjax3": "^4.3.2",
     "mermaid": "^11.6.0",
     "vitepress-plugin-mermaid": "^2.0.17"
   }
