--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "@catppuccin/vitepress": "^0.1.2",
-    "vitepress": "^1.6.3",
     "vitepress-sidebar": "^1.31.1"
   },
   "devDependencies": {
     "markdown-it-mathjax3": "^4.3.2",
     "mermaid": "^11.6.0",
+    "vitepress": "2.0.0-alpha.12",
     "vitepress-plugin-mermaid": "^2.0.17"
   }
 }
