🚑 (ci) fix build x2

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vitepress preview ."
   },
   "dependencies": {
+    "@catppuccin/vitepress": "^0.1.2",
     "@mdit/plugin-footnote": "^0.22.2",
     "markdown-it-mathjax3": "^4.3.2",
     "markdown-it-obsidian-callouts": "^0.3.2",
